--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "konva": "^7.0.7",
     "mysql": "^2.18.1",
     "socket.io": "^2.3.0"
   }
