--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "express-session": "^1.17.1",
     "konva": "^7.0.7",
     "mysql": "^2.18.1",
-    "socket.io": "^2.3.0"
+    "path": "^0.12.7",
+    "socket.io": "^2.3.0",
+    "socket.io-stream": "^0.9.1",
+    "websocket": "^1.0.32"
   }
 }
